<resources>
    <string name="app_name">SportSpot</string>
    <string name="alegeti_sportul_dorit">Alegeti sportul dorit:</string>
    <string name="username">Username</string>
    <string name="parola">Parola</string>
    <string name="confirma_parola">Confirma parola</string>
    <string name="inregistreaza_te">Inregistreaza-te!</string>
    <string name="ai_deja_un_cont">Ai deja un cont? Conecteaza-te! ></string>
    <string name="conecteaza_te">Conecteaza-te!</string>
    <string name="nu_ai_un_cont">Nu ai un cont? Inregistreaza-te! ></string>
    <string name="email">Email</string>
    <string name="auth_failed">Conectarea a esuat!</string>
    <string name="feedback_text">Nu ai trimis inca un comentariu cu privire la aplicatie.
        Vrei sa trimiti unul? </string>
    <string name="feedback_score">Nu ai trimis inca o nota. Vrei sa trimiti? </string>
    <string name="adauga_feedback">Adauga feedback</string>
    <string name="contact">Contact</string>
    <string name="deconectare">Deconectare</string>
    <string name="versiune">versiunea 1.0</string>
    <string name="contacteaza_ne">Contacteaza-ne la adresa de mail</string>
    <string name="contact_mail">contact@sportspot.ro</string>
    <string name="feedback_titlu">Spune-ne parerea ta!</string>
    <string name="comentariu">Comentariu</string>
    <string name="nota">Nota (intre 1 si 10)</string>
    <string name="rezultate_volei">Rezultate volei</string>
    <string name="rezultate_fotbal">Rezultate fotbal</string>
    <string name="rezultate_handbal">Rezultate handbal</string>
    <string name="listview_row_field_no_content">Nu exista date.</string>
    <string name="pdm_ase_ro">pdm.ase.ro</string>
    <string name="site">sau pe site:</string>
    <string name="rapoarte">Rapoarte</string>
    <string name="date_nepreluate">Datele nu au putut fi preluate</string>
    <string name="alegeti_sport">Alegeti sportul pentru care doriti vizualizarea raportului</string>
    <string name="raport_antrenori">Raport antrenori</string>
    <string name="raport_echipe">Raport echipe</string>
    <string name="raport_numar_titluri">Raport titluri castigate</string>
    <string name="raport_titluri_castigate">Raport echipe cu titluri castigate</string>
    <string name="salveaza_raportul_in_fisier_txt">Salveaza raportul in fisier txt</string>
    <string name="feedback_succes">Feedback-ul a fost transmis cu succes.</string>
    <string name="feedback_fail">A aparut o eroare la transmiterea feedback-ului..</string>
    <string name="photo_upload_succes">Fotografia a fost incarcata cu succes!</string>
    <string name="photo_upload_fail">Incarcarea a esuat!</string>
    <string name="adauga_un_avatar">Adauga un avatar</string>
    <string name="adauga_o_poza_de_profil">Adauga o poza de profil</string>
    <string name="raport_grafic_cartonase_rosii">Raport grafic cartonase rosii</string>
    <string name="introduceti_mail">Introduceti o adresa de email.</string>
    <string name="introduceti_mail_valid">Introduceti o adresa email valida.</string>
    <string name="introduceti_parola">Introduceti o parola</string>
    <string name="introduceti_parola_6_caractere">Introduceti o parola de minim 6 caractere.</string>
    <string name="datele_au_fost_salvate_la_adresa">Datele au fost salvate la adresa</string>
    <string name="datele_au_fost_preluate_cu_succes">Date preluate cu succes!</string>
    <string name="introduceti_un_comentariu">Introduceti un comentariu!</string>
    <string name="nota_max_min">Nota max: 10, nota min: 1</string>
    <string name="se_preiau_datele">Se preiau datele...</string>
    <string name="reprezentare_grafica_nr_cartonase_rosii">Reprezentarea grafica a numarului de cartonase rosii obtinut de fiecare echipa</string>
    <string name="cartonase_rosii">Cartonase rosii</string>
    <string name="introduceti_parola_pentru_confirmare">Introduceti parola pentru confirmare.</string>
    <string name="parolele_introduse_nu_coincid">Parolele introduse nu coincid.</string>
    <string name="intregistrare_efectuata_cu_succes">Inregistrarea s-a efectuat cu succes!</string>
    <string name="email_deja_asociat_unui_cont">Acest email este deja asociat unui cont.</string>
    <string name="csie_ase">CSIE ASE</string>


    <string-array name="lv_sports_list">
        <item>Fotbal</item>
        <item>Handbal</item>
        <item>Volei</item>
    </string-array>
</resources>
